--- a/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/index.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/index.html
@@ -193,9 +193,9 @@ A continuación explicamos cómo derivar la función de coste (<span id="Anexo-R
 Veamos, ahora, cómo llevar a cabo el <span id="Anexo-Retropropagación-Capas intermedias-Paso 2"></span><strong id="Paso 2">Paso 2</strong>: ¿cómo calculamos el gradiente (o lo que contribuye el peso \(it\) en el error) para los pesos de las capas intermedias?, es decir, cómo calculamos:
 </p>
 
-\[%align
+\begin{align}
 \frac{\delta J(\Theta)}{\delta \theta_{it}^{(q)}} 
-\]
+\end{align}
 
 <p>
 <a href="Derivadas capas intermedias.html">Derivadas capas intermedias</a>
