--- a/src/Notes/Math/Pre-Calculus/AGAA/07_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/07_03.html
@@ -72,9 +72,9 @@
 The <span id="The Conic Sections and Nonlinear Systems-Characteristics-conic sections"></span><strong id="conic sections">conic sections</strong> in this chapter have equations that can be written in the form:
 </p>
 
-\[%align
+\begin{align}
 Ax^2 + Dx + Cy^2 + Ey + F = 0
-\]
+\end{align}
 
 <p>
 where either \(A\) or \(C\) must be nonzero.
