--- a/src/Notes/Math/Pre-Calculus/AGAA/08_01.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_01.html
@@ -218,9 +218,9 @@ If a central angle for a sector has measure \(\theta\) radians, then the sector 
 the area of the sector is given by the product of the fraction \(\frac{\theta}{2\pi}\) and the total area:
 </p>
 
-\[
+\begin{align}
 \mathcal{A} = \frac{\theta}{2\pi}(\pi r^2) = \frac{1}{1}r^2 \theta, \theta \text{ in radians}
-\]
+\end{align}
 
 <div id="Angles and Their Measures-Linear and Angular Speed"><h2 id="Linear and Angular Speed" class="header"><a href="#Angles and Their Measures-Linear and Angular Speed">Linear and Angular Speed</a></h2></div>
 
