--- a/src/Notes/DataScience/ML/StanfordCoursera/Ecuación Normal.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/Ecuación Normal.html
@@ -154,7 +154,7 @@ J(\Theta) = \frac{1}{2m} (X\Theta - Y)^T(X\Theta - Y) + \frac{1}{2m} \lambda \Th
 Con la ecuación normal, en lugar de actualizar el vector de pesos \(\Theta\) de forma iterativa, lo que hacemos es igualar la derivada del coste en base a los pesos a cero utilizando derivación matricial:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) = 
 \begin{bmatrix}
 \frac{\delta J(\Theta)}{\delta \theta_0} \\
@@ -173,7 +173,7 @@ Con la ecuación normal, en lugar de actualizar el vector de pesos \(\Theta\) de
 \end{bmatrix}
 = 
 \overrightarrow{0}
-\]
+\end{align}
 
 <hr>
 
@@ -185,57 +185,57 @@ A continuación exponemos cómo se calcula la derivada:
 Sustituímos la función de coste:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \Delta_\Theta \frac{1}{2m}(X \Theta - Y)^T (X \Theta - Y)
-\]
+\end{align}
 
 <p>
 Aplicamos la propiedad \((A + B)^T = A^T + B^T\) 
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \Delta_\Theta \frac{1}{2m}((X\Theta)^T - Y^T) (X \Theta - Y)
-\]
+\end{align}
 
 <p>
 Sacamos el factor constante de la derivada y realizamos la multiplicación:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{2m} \Delta_\Theta (X\Theta)^T(X\Theta) - (X\Theta)^TY -Y^TX\Theta + Y^TY
-\]
+\end{align}
 
 <p>
 Aplicamos la propiedad \(AB = B^TA^T\), tal que \(Y^T(X\Theta) = (X\Theta)^T((Y)^T)^T = (X\Theta)^TY\)
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{2m} \Delta_\Theta (X\Theta)^T(X\Theta) - (X\Theta)^TY - (X\Theta)^TY + Y^TY
-\]
+\end{align}
 
 <p>
 Agrupamos términos compatibles:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{2m} \Delta_\Theta (X\Theta)^T(X\Theta) - 2(X\Theta)^TY + Y^TY
-\]
+\end{align}
 
 <p>
 Como \(\Delta_\Theta Y^TY=0\):
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{2m} \Delta_\Theta (X\Theta)^T(X\Theta) - 2(X\Theta)^TY
-\]
+\end{align}
 
 <p>
 Finalmente calculamos la derivada matricial:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{2m} 2X^T(X\Theta) - 2X^TY = \frac{1}{m} X^T(X\Theta) - X^TY
-\]
+\end{align}
 
 <hr>
 
@@ -243,45 +243,45 @@ Finalmente calculamos la derivada matricial:
 Ahora igualamos la expresión obtenida a cero:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{m} [X^TX\Theta - X^TY] = 0
-\]
+\end{align}
 
 <p>
 Multiplicamos por \(m\) en ambos lados de la ecuación:
 </p>
 
-\[%align
+\begin{align}
 X^TX\Theta - X^TY = 0
-\]
+\end{align}
 
 <p>
 Sumamos \(X^TY\) en ambos lados de la ecuación:
 </p>
 
-\[%align
+\begin{align}
 X^TX\Theta - X^TY + X^TY= X^TY
-\]
+\end{align}
 
-\[%align
+\begin{align}
 X^TX\Theta = X^TY
-\]
+\end{align}
 
 <p>
 Multiplicamos por \((X^TX)^{-1}\) por la izquierda en ambos lados de la ecuación:
 </p>
 
-\[%align
+\begin{align}
 (X^TX)^{-1}X^TX\Theta = (X^TX)^{-1}X^TY
-\]
+\end{align}
 
-\[%align
+\begin{align}
 I\Theta = (X^TX)^{-1}X^TY
-\]
+\end{align}
 
-\[%align
+\begin{align}
 \Theta = (X^TX)^{-1}X^TY
-\]
+\end{align}
 
 <p>
 De tal manera que ahora hemos calculado el vector de pesos óptimo que minimiza el coste.
@@ -301,25 +301,25 @@ J(\Theta) = \frac{1}{2m} (X\Theta - Y)^T(X\Theta - Y) + \frac{1}{2m} \lambda \Th
 El primer término ya lo hemos derivado, por lo tanto procedemos a derivar el segundo término:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta \frac{1}{2m} \lambda \Theta^T\Theta
-\]
+\end{align}
 
 <p>
 Sacamos el factor constante \(\frac{\lambda}{2m}\) fuera de la derivada
 </p>
 
-\[%align
+\begin{align}
 \frac{\lambda}{2m} \Delta_\Theta [\Theta^T\Theta]
-\]
+\end{align}
 
 <p>
 Llevamos a cabo la derivada matricial:
 </p>
 
-\[%align
+\begin{align}
 \frac{\lambda}{2m} 2 \Theta = \frac{\lambda}{m} \Theta
-\]
+\end{align}
 
 <hr>
 
@@ -327,61 +327,61 @@ Llevamos a cabo la derivada matricial:
 Juntamos las derivadas de ambos términos:
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{m} [X^TX\Theta - X^TY] + \frac{\lambda}{m} \Theta
-\]
+\end{align}
 
 <p>
 Sacamos \(\frac{1}{m}\) como factor común e igualamos a cero
 </p>
 
-\[%align
+\begin{align}
 \Delta_\Theta J(\Theta) =  \frac{1}{m} (X^TX\Theta - X^TY + \lambda\Theta) = 0
-\]
+\end{align}
 
 <p>
 Multiplicamos por \(m\) en ambos lados de la ecuación:
 </p>
 
-\[%align
+\begin{align}
 X^TX\Theta - X^TY + \lambda\Theta = 0
-\]
+\end{align}
 
 <p>
 Sumamos \(X^TY\) en ambos lados de la ecuación:
 </p>
 
-\[%align
+\begin{align}
 X^TX\Theta - X^TY + X^TY + \lambda\Theta = X^TY
-\]
+\end{align}
 
-\[%align
+\begin{align}
 X^TX\Theta + \lambda\Theta = X^TY
-\]
+\end{align}
 
 <p>
 Sacamos \(\Theta\) como factor común
 </p>
 
-\[%align
+\begin{align}
 (X^TX + \lambda I)\Theta = X^TY
-\]
+\end{align}
 
 <p>
 Donde \(I\) es la matriz identidad e dimensiones \((n+1) \times (n+1)\). Multiplicamos \((X^TX + \lambda I)^{-1}\) por la izquierda en ambos lados de la ecuación:
 </p>
 
-\[%align
+\begin{align}
 (X^TX + \lambda I)^{-1}(X^TX + \lambda I)\Theta = (X^TX + \lambda I)^{-1}X^TY
-\]
+\end{align}
 
-\[%align
+\begin{align}
 I\Theta = (X^TX + \lambda I)^{-1}X^TY
-\]
+\end{align}
 
-\[%align
+\begin{align}
 \Theta = (X^TX + \lambda I)^{-1}X^TY
-\]
+\end{align}
 
 <p>
 De tal forma que hemos calculado el \(\Theta\) óptimo que minimiza el coste, utilizando regularización.
