--- a/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Derivadas capas intermedias.html
+++ b/src/Notes/DataScience/ML/StanfordCoursera/NeuralNetworks/Anexo/Derivadas capas intermedias.html
@@ -42,25 +42,25 @@
 Donde \(q\) denota la capa, con \(1 \leq q \leq (k-1)\). Pues lo que tenemos que hacer es, de nuevo, aplicar la regla de la cadena, entre el peso \(\theta_{it}^{(q)}\) (peso \(t\) del nodo \(i\) de la capa \(q\)) y todo nodo \(a_{lj}^{(q+1)}\)(es decir para el nodo \(l\) en la capa \(q+1\) para el ejemplo \(j\)).
 </p>
 
-\[%align
+\begin{align}
 \frac{\delta J(\Theta)}{\delta \theta_{it}^{(q)}} = \frac{J(\Theta)}{\delta a^{(q+1)}_{1j}}\frac{\delta a_{1j}^{(q+1)}}{\delta \theta_{it}^{(q)}} + \cdots + \frac{J(\Theta)}{\delta a^{(q+1)}_{(S_(q+1))j}}\frac{\delta a_{(S_(q+1))j}^{(q+1)}}{\delta \theta_{it}^{(q)}}
-\]
+\end{align}
 
 <p>
 Donde \(S_{(q+1)}\) es el número de nodos en la capa \(q+1\). Para cada término \(l\) de la suma, debemos volver a aplicar la regla de la cadena, tal que:
 </p>
 
-\[%align
+\begin{align}
 \frac{\delta J(\Theta)}{\delta \theta_{it}^{(q)}} = \frac{J(\Theta)}{\delta a^{(q+1)}_{lj}}\frac{\delta a_{lj}^{(q+1)}}{\delta a_{lj}^{(q)}}\frac{\delta a_{lj}^{(q)}}{\delta \theta_{it}^{(q)}}
-\]
+\end{align}
 
 <p>
 Es decir:
 </p>
 
-\[%align
+\begin{align}
 \frac{\delta J(\Theta)}{\delta \theta_{it}^{(q)}} = \sum_{l=1}^{S_{(q+1)}} \frac{J(\Theta)}{\delta a^{(q+1)}_{lj}}\frac{\delta a_{lj}^{(q+1)}}{\delta a_{lj}^{(q)}}\frac{\delta a_{lj}^{(q)}}{\delta \theta_{it}^{(q)}}
-\]
+\end{align}
 
 <p>
 Cabe destacar que \(\frac{\delta a_{lj}^{(q)}}{\delta \theta_{it}^{(q)}} = \frac{\delta g(z_{lj}^{(q)})}{\delta z_{lj}^{(q)}} \frac{\delta z_{lj}^{(q)}}{\delta \theta_{it}^{(q)}}\) (explicado en <a href="Derivada de la función de coste.html">Derivada de la función del coste</a>).
@@ -70,9 +70,9 @@ Cabe destacar que \(\frac{\delta a_{lj}^{(q)}}{\delta \theta_{it}^{(q)}} = \frac
 Entonces, si generalizamos para todos los ejemplos, \(m\):
 </p>
 
-\[%align
+\begin{align}
 \frac{\delta J(\Theta)}{\delta \theta_{it}^{(q)}} = \sum_{j=1}^m\sum_{l=1}^{S_{(q+1)}} \frac{J(\Theta)}{\delta a^{(q+1)}_{lj}}\frac{\delta a_{lj}^{(q+1)}}{\delta a_{lj}^{(q)}}\frac{\delta a_{lj}^{(q)}}{\delta \theta_{it}^{(q)}}
-\]
+\end{align}
 </div>
   
 
