[ICPDM] 03_02: finish notes [skip ci]

--- a/src/Notes/DataScience/Master/3C_1C/ICPDM/index.html
+++ b/src/Notes/DataScience/Master/3C_1C/ICPDM/index.html
@@ -76,6 +76,9 @@
 <li>
 <a href="M03/01.html">Tema 1. Introducción a las arquitecturas de procesamiento de streams: Lambda y Kappa</a>
 
+</li><li>
+<a href="M03/02.html">Tema 2. Componentes tecnológicos de adquisición y transmisión/distribución de eventos: Kafka</a>
+
 </li></ul>
 </div>
   
