[CET] 02_07: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -81,6 +81,9 @@ Limits and Derivatives
 </li><li>
 <a href="02_06.html">Limits at Infinity. Horizontal Asymptotes</a>
 
+</li><li>
+<a href="02_07.html">Derivatives and Rates of Change</a>
+
 </li></ol>
 </li></ol>
 </div>
