[CET] 02_07: fix typos [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_07.html
+++ b/src/Notes/Math/Calculus/CET/02_07.html
@@ -94,11 +94,11 @@ See Figure 3.
 </p>
 
 <p>
-Notice that as \(x\) approaches \(a\), then \(h\) approaches \(0\). Therefor the definition of the slope of the tangent line becomes:
+Notice that as \(x\) approaches \(a\), then \(h\) approaches \(0\). Therefor3 the definition of the slope of the tangent line becomes:
 </p>
 
 \begin{align}
-m = \lim{h \rightarrow 0} \frac{f(a + h) - f(a)}{h}
+m = \lim_{h \rightarrow 0} \frac{f(a + h) - f(a)}{h}
 \end{align}
 
 <p>
